[package]
name = "trow"
version = "0.4.0"
authors = []
edition = "2021"

[workspace]
members = ["trow-server", "trow-protobuf"]


[features]
sqlite = []

[dependencies]
futures = "0.3"
axum = { version = "0.6.18", features = ["headers"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
axum-extra = { version = "0.7", features = ["typed-routing"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
rand = "0.8"
jwt = "0.16"
frank_jwt = "3.1"
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10.0"
base64 = "0.21.0"
anyhow = "1.0"
trow-protobuf = { path = "./trow-protobuf" }
trow-server = { path = "./trow-server" }
derive_more = "0.99"
hostname = "0.3"
clap = { version = "4.1.0", features = ["derive"] }
tonic = "0.6.0"
prost = "0.9.0"
prost-types = "0.9.0"
bytes = "1"
chrono = { version = "^0.4", features = ["serde"] }
rusqlite = "0.28.0"
data-encoding = "2.3"
lazy_static = "1.4.0"
regex = "1.5.0"
sha2 = "0.10.0"
hex = "0.4.0"
thiserror = "1.0"
kube = { version = "0.82", features = ["admission"] }
k8s-openapi = { version = "0.18.0", features = ["v1_24"] }
json-patch = "1.0.0"
tokio = { version = "1", features = ["macros"] }
tokio-util = { versiom="0.7.8", features=["codec"]}
hyper = "0.14"
paste = "1.0.12"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
environment = "^0.1"
hyper = "0.14"
rand = "^0.8"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
libc = "0.2"
derive_more = "0.99"
tempfile = "3"
